--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#420599</color>
+    <color name="primary_text">#000000</color>
+    <color name="hint_text">#888888</color>
+    <color name="button_text">#FFFFFF</color>
+    <color name="button_color">#5700e7</color>
+
 </resources>
