--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,10 +12,10 @@
         android:layout_height="100dp"
         android:src="@drawable/logo"
         android:contentDescription="@string/app_name"
+        android:layout_marginTop="150dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="150dp"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
         android:id="@+id/titleRegister"
@@ -39,7 +39,10 @@
         android:textColorHint="@color/hint_text"
         android:padding="12dp"
         android:inputType="textPersonName"
+        android:autofillHints="name"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/titleRegister"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -53,7 +56,10 @@
         android:textColorHint="@color/hint_text"
         android:padding="12dp"
         android:inputType="textPersonName"
+        android:autofillHints="familyName"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/inputNombre"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -67,7 +73,10 @@
         android:textColorHint="@color/hint_text"
         android:padding="12dp"
         android:inputType="textEmailAddress"
+        android:autofillHints="emailAddress"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/inputApellidos"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -81,7 +90,10 @@
         android:textColorHint="@color/hint_text"
         android:padding="12dp"
         android:inputType="textPassword"
+        android:autofillHints="password"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/inputEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -95,6 +107,8 @@
         android:backgroundTint="@color/primary_color"
         android:padding="12dp"
         android:layout_marginTop="40dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintTop_toBottomOf="@id/inputPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
