--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,14 @@
     </style>
 
     <style name="Theme.Kollab" parent="Base.Theme.Kollab" />
+
+    <style name="Theme.Kollab.SplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_animat</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.Kollab</item>
+    </style>
+
+
+
 </resources>
