--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="hint_text">#888888</color>
     <color name="button_text">#FFFFFF</color>
     <color name="button_color">#5700e7</color>
+    <color name="gray">#8A8A8A</color>
+
 
 </resources>
